--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -28,8 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../data/train.csv.zip',nrows = 1e6)\n",
-    "test  = pd.read_csv('../data/test.csv.zip')"
+    "train = pd.read_csv('../input/train.csv.zip',nrows = 1e6)\n",
+    "test  = pd.read_csv('../input/test.csv.zip')"
    ]
   },
   {
@@ -1372,8 +1372,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1387,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
