complete baseline .977 LB,  hyperopt init

--- a/src/features.ipynb
+++ b/src/features.ipynb
@@ -39,13 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -77,7 +70,7 @@
     "                       usecols=['ip','app','device','os', 'channel', 'click_time', 'is_attributed'])\n",
     "print('loading test data...')\n",
     "test_df = pd.read_csv(\"../input/test.csv.zip\", \n",
-    "                      nrows=100000, \n",
+    "#                       nrows=100000, \n",
     "                      parse_dates=['click_time'], \n",
     "                      dtype=dtypes, \n",
     "                      usecols=['ip','app','device','os', 'channel', 'click_time', 'click_id'])"
@@ -512,11 +505,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>channel_nunique_ip</th>\n",
-       "      <td>25</td>\n",
+       "      <td>66</td>\n",
        "      <td>80</td>\n",
        "      <td>25</td>\n",
-       "      <td>82</td>\n",
-       "      <td>77</td>\n",
+       "      <td>88</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>app_cumcnt_ip_device_os</th>\n",
@@ -536,11 +529,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>app_nunique_ip</th>\n",
-       "      <td>15</td>\n",
+       "      <td>23</td>\n",
        "      <td>31</td>\n",
        "      <td>16</td>\n",
-       "      <td>33</td>\n",
-       "      <td>29</td>\n",
+       "      <td>39</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>app_nunique_ip_os</th>\n",
@@ -548,14 +541,14 @@
        "      <td>21</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>21</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>device_nunique_ip</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -580,7 +573,7 @@
        "      <td>21</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>21</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -598,12 +591,12 @@
        "os                                         16                   19   \n",
        "day                                         8                    8   \n",
        "hour                                       12                   12   \n",
-       "channel_nunique_ip                         25                   80   \n",
+       "channel_nunique_ip                         66                   80   \n",
        "app_cumcnt_ip_device_os                     0                    0   \n",
        "hour_nunique_ip_day                         4                   11   \n",
-       "app_nunique_ip                             15                   31   \n",
+       "app_nunique_ip                             23                   31   \n",
        "app_nunique_ip_os                           9                   21   \n",
-       "device_nunique_ip                           1                    5   \n",
+       "device_nunique_ip                           2                    5   \n",
        "app_nunique_channel                         5                    4   \n",
        "os_cumcnt_ip                                0                    0   \n",
        "app_nunique_ip_device_os                    9                   21   \n",
@@ -619,12 +612,12 @@
        "os                                         17                   42   \n",
        "day                                         8                    8   \n",
        "hour                                       12                   12   \n",
-       "channel_nunique_ip                         25                   82   \n",
+       "channel_nunique_ip                         25                   88   \n",
        "app_cumcnt_ip_device_os                     0                    0   \n",
        "hour_nunique_ip_day                         4                   12   \n",
-       "app_nunique_ip                             16                   33   \n",
+       "app_nunique_ip                             16                   39   \n",
        "app_nunique_ip_os                           2                    3   \n",
-       "device_nunique_ip                           1                    4   \n",
+       "device_nunique_ip                           1                    7   \n",
        "app_nunique_channel                         3                    4   \n",
        "os_cumcnt_ip                                0                    0   \n",
        "app_nunique_ip_device_os                    2                    2   \n",
@@ -640,15 +633,15 @@
        "os                                         19  \n",
        "day                                         8  \n",
        "hour                                       12  \n",
-       "channel_nunique_ip                         77  \n",
+       "channel_nunique_ip                         81  \n",
        "app_cumcnt_ip_device_os                     0  \n",
        "hour_nunique_ip_day                        11  \n",
-       "app_nunique_ip                             29  \n",
-       "app_nunique_ip_os                          21  \n",
+       "app_nunique_ip                             30  \n",
+       "app_nunique_ip_os                          23  \n",
        "device_nunique_ip                           3  \n",
        "app_nunique_channel                         2  \n",
        "os_cumcnt_ip                                0  \n",
-       "app_nunique_ip_device_os                   21  "
+       "app_nunique_ip_device_os                   23  "
       ]
      },
      "execution_count": 11,
@@ -766,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,16 +768,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "643"
+       "562"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,16 +795,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -826,7 +812,7 @@
     "    + \"_\" + train_df['os'].astype(str)).apply(hash) % D\n",
     "\n",
     "click_buffer= np.full(D, 3000000000, dtype=np.uint32)\n",
-    "train_df['epochtime']= train_df['click_time'].astype(np.int64) // 10 ** 9\n",
+    "train_df['epochtime']= train_df['click_time'].astype(np.int64) // 10 ** 9 ## pretty slow\n",
     "next_clicks= []\n",
     "\n",
     "for category, t in tqdm_notebook(zip(reversed(train_df['category'].values), reversed(train_df['epochtime'].values))):\n",
@@ -839,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +870,7 @@
      "text": [
       "vars and data type: \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 40100000 entries, 0 to 99999\n",
+      "Int64Index: 58790469 entries, 0 to 18790468\n",
       "Data columns (total 30 columns):\n",
       "app                         uint16\n",
       "channel                     uint16\n",
@@ -917,10 +903,10 @@
       "nextClick                   int64\n",
       "nextClick_shift1            float64\n",
       "dtypes: datetime64[ns](1), float64(7), int64(15), uint16(4), uint32(1), uint8(2)\n",
-      "memory usage: 7.7 GB\n",
+      "memory usage: 11.3 GB\n",
       "downcast to uint8,16, float16,32\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 40100000 entries, 0 to 99999\n",
+      "Int64Index: 58790469 entries, 0 to 18790468\n",
       "Data columns (total 30 columns):\n",
       "app                         uint16\n",
       "channel                     uint16\n",
@@ -953,7 +939,7 @@
       "nextClick                   uint32\n",
       "nextClick_shift1            float64\n",
       "dtypes: datetime64[ns](1), float16(4), float64(3), uint16(9), uint32(4), uint8(9)\n",
-      "memory usage: 3.4 GB\n"
+      "memory usage: 5.0 GB\n"
      ]
     }
    ],
@@ -986,16 +972,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "38"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,16 +1006,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40100000, 30)"
+       "(58790469, 30)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1035,7 @@
      "text": [
       "train size:  37500000\n",
       "valid size:  2500000\n",
-      "test size :  100000\n"
+      "test size :  18790469\n"
      ]
     }
    ],
@@ -1065,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1114,10 +1100,30 @@
     }
    ],
    "source": [
-    "# with pd.HDFStore('../input/feat/feat_109903890_149903890.h5') as store:\n",
-    "#     print(store.keys())\n",
-    "#     test_df = store['test_df']\n",
-    "#     val_df = store['valid_df']"
+    "with pd.HDFStore('../input/feat/feat_109903890_149903890.h5') as store:\n",
+    "    print(store.keys())\n",
+    "    test_df = store['test_df']\n",
+    "    val_df = store['valid_df']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18790469, 30)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.shape"
    ]
   },
   {
@@ -1130,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,9 +1146,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col</th>\n",
+       "      <th>imp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>channel</td>\n",
+       "      <td>305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>app</td>\n",
+       "      <td>232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>os</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nextClick</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>hour</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>X0</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ip_tcount</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>X8</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>X3</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ip_app_count</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>X5</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>device</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ip_app_os_count</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>X6</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>X4</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ip_app_os_var</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>X1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>X2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>ip_app_channel_mean_hour</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ip_app_channel_var_day</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>X7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ip_tchan_count</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nextClick_shift</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>day</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         col  imp\n",
+       "5                    channel  305\n",
+       "2                        app  232\n",
+       "4                         os  147\n",
+       "0                  nextClick  138\n",
+       "6                       hour  105\n",
+       "15                        X0   52\n",
+       "8                  ip_tcount   40\n",
+       "23                        X8   35\n",
+       "18                        X3   33\n",
+       "10              ip_app_count   32\n",
+       "20                        X5   28\n",
+       "3                     device   27\n",
+       "11           ip_app_os_count   21\n",
+       "21                        X6   13\n",
+       "19                        X4   11\n",
+       "12             ip_app_os_var   10\n",
+       "16                        X1    9\n",
+       "17                        X2    9\n",
+       "14  ip_app_channel_mean_hour    8\n",
+       "13    ip_app_channel_var_day    7\n",
+       "22                        X7    7\n",
+       "9             ip_tchan_count    2\n",
+       "1            nextClick_shift    1\n",
+       "7                        day    0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame({'col':cols,'imp':importances}).sort_values(by='imp',ascending=False)"
    ]
@@ -1169,7 +1358,7 @@
   },
   "widgets": {
    "state": {
-    "9a204ec979334e789e1a3ffba5fadef5": {
+    "e2355fa735ed4e2891b16f2d63c105f7": {
      "views": [
       {
        "cell_index": 21
