feat2, preproc added

--- a/src/features.ipynb
+++ b/src/features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "debug = 0\n",
+    "debug = 1\n",
     "if debug:\n",
     "    nrows = 100000\n",
     "    nchunk = 400000\n",
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading train data... 109903890 149903890\n",
+      "loading train data... 25000 425000\n",
       "loading test data...\n"
      ]
     }
@@ -71,7 +71,7 @@
     "                       usecols=['ip','app','device','os', 'channel', 'click_time', 'is_attributed'])\n",
     "print('loading test data...')\n",
     "test_df = pd.read_csv(\"../input/test.csv.zip\", \n",
-    "#                       nrows=100000, \n",
+    "                      nrows=100000,  ## debug mode used \n",
     "                      parse_dates=['click_time'], \n",
     "                      dtype=dtypes, \n",
     "                      usecols=['ip','app','device','os', 'channel', 'click_time', 'click_id'])"
