cv add (not finish)

--- a/src/features.ipynb
+++ b/src/features.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "source": [
     "1. How many **unique** `channel` by `ip`\n",
-    "2. How many **cumcount** `app` by `ip`,`device`,`os` (person)\n",
+    "2. How many **cumcount** `app` by `ip`,`device`,`os` \n",
     "3. How many **unique** `hour` by `ip`,`day`\n",
     "4. How many **unique** `app` by `ip`\n",
     "5. How many **unique** `app` by `ip`,`os`\n",
