--- a/src/preproc_input.ipynb
+++ b/src/preproc_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df['hour'] = test_df.click_time.dt.hour.astype('uint8')\n",
+    "test_df['day']  = test_df.click_time.dt.day.astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +117,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 18790469 entries, 0 to 18790468\n",
-      "Data columns (total 7 columns):\n",
+      "Int64Index: 18790469 entries, 0 to 18790468\n",
+      "Data columns (total 9 columns):\n",
       "click_id      uint32\n",
       "ip            uint32\n",
       "app           uint16\n",
@@ -116,8 +126,10 @@
       "os            uint16\n",
       "channel       uint16\n",
       "click_time    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), uint16(4), uint32(2)\n",
-      "memory usage: 430.1 MB\n"
+      "hour          uint8\n",
+      "day           uint8\n",
+      "dtypes: datetime64[ns](1), uint16(4), uint32(2), uint8(2)\n",
+      "memory usage: 609.3 MB\n"
      ]
     }
    ],
@@ -127,7 +139,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df['hour'] = pd.to_datetime(train_df.click_time).dt.hour.astype('uint8')\n",
+    "train_df['day']  = pd.to_datetime(train_df.click_time).dt.day.astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 184903890 entries, 0 to 184903889\n",
+      "Data columns (total 9 columns):\n",
+      "ip               uint32\n",
+      "app              uint16\n",
+      "device           uint16\n",
+      "os               uint16\n",
+      "channel          uint16\n",
+      "click_time       datetime64[ns]\n",
+      "is_attributed    uint8\n",
+      "hour             uint8\n",
+      "day              uint8\n",
+      "dtypes: datetime64[ns](1), uint16(4), uint32(1), uint8(3)\n",
+      "memory usage: 5.3 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +199,7 @@
      "output_type": "stream",
      "text": [
       "['/test_df', '/train_df']\n",
-      "time cost:5.0 sec\n"
+      "time cost:5.3 sec\n"
      ]
     }
    ],
