--- a/src/preproc_input.ipynb
+++ b/src/preproc_input.ipynb
@@ -9,20 +9,20 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import gc \n",
-    "import time "
+    "import time \n",
+    "import pytz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading train data...\n",
-      "complete\n"
+      "loading train data...\n"
      ]
     }
    ],
@@ -50,28 +50,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 184903890 entries, 0 to 184903889\n",
-      "Data columns (total 7 columns):\n",
-      "ip               uint32\n",
-      "app              uint16\n",
-      "device           uint16\n",
-      "os               uint16\n",
-      "channel          uint16\n",
-      "click_time       datetime64[ns]\n",
-      "is_attributed    uint8\n",
-      "dtypes: datetime64[ns](1), uint16(4), uint32(1), uint8(1)\n",
-      "memory usage: 3.6 GB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_df.info()"
+    "cst = pytz.timezone('Asia/Shanghai')\n",
+    "train_df['click_time'] = pd.to_datetime(train_df['click_time']).dt.tz_localize(pytz.utc).dt.tz_convert(cst)\n",
+    "train_df['day']  = train_df.click_time.dt.day.astype('uint8')\n",
+    "train_df['hour'] = train_df.click_time.dt.hour.astype('uint8')"
    ]
   },
   {
@@ -99,17 +83,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df['hour'] = test_df.click_time.dt.hour.astype('uint8')\n",
-    "test_df['day']  = test_df.click_time.dt.day.astype('uint8')"
+    "test_df['click_timtest_df.click_time.dt.tz_localize['click_time']).dt.tz_localize(pytz.utc).dt.tz_convert(cst)\n",
+    "test_df['day']  = test_df.click_time.dt.day.astype('uint8')\n",
+    "test_df['hour'] = test_df.click_time.dt.hour.astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train data start :\n",
+    "* day6 -- 22:00\n",
+    "\n",
+    "end\n",
+    "* day10 -- 00:00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ip</th>\n",
+       "      <th>app</th>\n",
+       "      <th>device</th>\n",
+       "      <th>os</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>click_time</th>\n",
+       "      <th>is_attributed</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>83230</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 22:32:21+08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17357</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 22:33:34+08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35810</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 22:34:12+08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45745</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>478</td>\n",
+       "      <td>2017-11-06 22:34:52+08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>161007</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 22:35:08+08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ip  app  device  os  channel                click_time  is_attributed  \\\n",
+       "0   83230    3       1  13      379 2017-11-06 22:32:21+08:00              0   \n",
+       "1   17357    3       1  19      379 2017-11-06 22:33:34+08:00              0   \n",
+       "2   35810    3       1  13      379 2017-11-06 22:34:12+08:00              0   \n",
+       "3   45745   14       1  13      478 2017-11-06 22:34:52+08:00              0   \n",
+       "4  161007    3       1  13      379 2017-11-06 22:35:08+08:00              0   \n",
+       "\n",
+       "   hour  day  \n",
+       "0    22    6  \n",
+       "1    22    6  \n",
+       "2    22    6  \n",
+       "3    22    6  \n",
+       "4    22    6  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 184903890 entries, 0 to 184903889\n",
+      "Data columns (total 9 columns):\n",
+      "ip               uint32\n",
+      "app              uint16\n",
+      "device           uint16\n",
+      "os               uint16\n",
+      "channel          uint16\n",
+      "click_time       datetime64[ns, Asia/Shanghai]\n",
+      "is_attributed    uint8\n",
+      "hour             uint8\n",
+      "day              uint8\n",
+      "dtypes: datetime64[ns, Asia/Shanghai](1), uint16(4), uint32(1), uint8(3)\n",
+      "memory usage: 5.3 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -125,11 +278,11 @@
       "device        uint16\n",
       "os            uint16\n",
       "channel       uint16\n",
-      "click_time    datetime64[ns]\n",
+      "click_time    datetime64[ns, Asia/Shanghai]\n",
       "hour          uint8\n",
       "day           uint8\n",
-      "dtypes: datetime64[ns](1), uint16(4), uint32(2), uint8(2)\n",
-      "memory usage: 609.3 MB\n"
+      "dtypes: datetime64[ns, Asia/Shanghai](1), uint16(4), uint32(2), uint8(2)\n",
+      "memory usage: 1.2 GB\n"
      ]
     }
    ],
@@ -139,47 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df['hour'] = pd.to_datetime(train_df.click_time).dt.hour.astype('uint8')\n",
-    "train_df['day']  = pd.to_datetime(train_df.click_time).dt.day.astype('uint8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 184903890 entries, 0 to 184903889\n",
-      "Data columns (total 9 columns):\n",
-      "ip               uint32\n",
-      "app              uint16\n",
-      "device           uint16\n",
-      "os               uint16\n",
-      "channel          uint16\n",
-      "click_time       datetime64[ns]\n",
-      "is_attributed    uint8\n",
-      "hour             uint8\n",
-      "day              uint8\n",
-      "dtypes: datetime64[ns](1), uint16(4), uint32(1), uint8(3)\n",
-      "memory usage: 5.3 GB\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +312,7 @@
      "output_type": "stream",
      "text": [
       "['/test_df', '/train_df']\n",
-      "time cost:5.3 sec\n"
+      "time cost:10.6 sec\n"
      ]
     }
    ],
