--- a/src/features3.ipynb
+++ b/src/features3.ipynb
@@ -66,49 +66,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp = test_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp2 = train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    45515\n",
-       "1    45442\n",
-       "2    45404\n",
-       "3    45364\n",
-       "4    45348\n",
-       "Name: click_time, dtype: uint16"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((tmp.click_time - tmp2.click_time) / np.timedelta64(1,'s')).fillna(50000).astype('uint16')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -932,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- len_trn  :  \n",
+    "- len_trn  : 125193591 \n",
     "\n",
     "- len_tst  : 18790469"
    ]
@@ -967,16 +924,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len_tst = 18790469\n",
-    "len_trn = 143984060 - 18790469"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -985,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1127,10 +1074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1139,18 +1084,8 @@
       "next click time by(ip,app,os,device)...\n",
       "shift 1...\n",
       "next_click_dt added\n",
-      "gc...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'nextclick_cnt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-6fbe888db99e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'gc...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mtrn_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'shift_1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mnextclick_cnt\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mgc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'complete'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nextclick_cnt' is not defined"
+      "gc...\n",
+      "complete\n"
      ]
     }
    ],
@@ -1175,6 +1110,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "save temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store = pd.HDFStore('../input/feat/feat3_partial3.h5')\n",
+    "store['trn_df'] = trn_df\n",
+    "store.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.HDFStore('../input/feat/feat3_partial3.h5') as store:\n",
+    "    trn_df = store['trn_df']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len_tst = 18790469\n",
+    "len_trn = 143984060 - 18790469"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### mean encode ON TRAINNING ONLY NOT ON TEST ###\n",
     "- ip mean target\n",
     "- app mean target \n",
@@ -1187,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,18 +1211,9 @@
       "fold:2 mean encoding...\n",
       "\tip\tapp\tchannel\tos\tdevice\t\n",
       "fold:3 mean encoding...\n",
-      "\tip\tapp\tchannel\tos\tdevice\t\n"
+      "\tip\tapp\tchannel\tos\tdevice\t\n",
+      "complete\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "34"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1293,44 +1265,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 40000000 entries, 0 to 39999999\n",
-      "Data columns (total 34 columns):\n",
+      "Int64Index: 125193591 entries, 59709852 to 184903442\n",
+      "Data columns (total 23 columns):\n",
       "app                         uint16\n",
       "channel                     uint16\n",
       "click_id                    float64\n",
-      "click_time                  datetime64[ns]\n",
+      "click_time                  datetime64[ns, Asia/Shanghai]\n",
       "day                         uint8\n",
       "device                      uint16\n",
       "hour                        uint8\n",
       "ip                          uint32\n",
       "is_attributed               float64\n",
+      "newip                       int32\n",
       "os                          uint16\n",
-      "app_cumcnt_ip_device_os     uint16\n",
-      "os_cumcnt_ip                uint16\n",
       "channel_nunique_ip          uint8\n",
       "hour_nunique_ip_day         uint8\n",
       "app_nunique_ip              uint8\n",
-      "app_nunique_ip_os           uint8\n",
-      "device_nunique_ip           uint8\n",
       "app_nunique_channel         uint8\n",
       "app_nunique_ip_device_os    uint8\n",
-      "channel_cnt_ip_day_hour     uint16\n",
       "channel_cnt_ip_app          uint16\n",
-      "channel_cnt_ip_app_os       uint16\n",
-      "hour_var_ip_day_channel     float16\n",
-      "hour_var_ip_app_os          float16\n",
-      "day_var_ip_app_channel      float16\n",
-      "hour_mean_ip_app_channel    float16\n",
       "next_click_dt               uint16\n",
-      "next_click_dt2              uint16\n",
-      "next_click_dt_cnt           uint32\n",
       "ip_mean_target              float16\n",
       "app_mean_target             float16\n",
       "channel_mean_target         float16\n",
       "os_mean_target              float16\n",
       "device_mean_target          float16\n",
-      "dtypes: datetime64[ns](1), float16(9), float64(2), uint16(11), uint32(2), uint8(9)\n",
-      "memory usage: 3.3 GB\n"
+      "dtypes: datetime64[ns, Asia/Shanghai](1), float16(5), float64(2), int32(1), uint16(6), uint32(1), uint8(7)\n",
+      "memory usage: 8.0 GB\n"
      ]
     }
    ],
@@ -1354,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1326,8 @@
       "target_mean col:os...\n",
       "target_mean col:app...\n",
       "target_mean col:device...\n",
-      "target_mean col:channel...\n"
+      "target_mean col:channel...\n",
+      "complete\n"
      ]
     }
    ],
@@ -1376,7 +1338,7 @@
     "for col in cols:\n",
     "    print('target_mean col:{}...'.format(col))\n",
     "    gp = trn_df[selcols].groupby(col)\n",
-    "    test_df[col+'_mean_target'] = test_df[col].map(gp.is_attributed.mean())\n",
+    "    test_df[col+'_mean_target'] = test_df[col].map(gp.is_attributed.mean()).astype('float16')\n",
     "    \n",
     "prior = trn_df.is_attributed.mean()\n",
     "test_df[[col+'_mean_target' for col in cols]] = test_df[[col+'_mean_target' for col in cols]].fillna(prior)\n",
@@ -1387,36 +1349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "126"
+       "(18790469, 23)"
       ]
      },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(18790469, 34)"
-      ]
-     },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1435,44 +1377,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 18790469 entries, 40000000 to 58790468\n",
-      "Data columns (total 34 columns):\n",
+      "Int64Index: 18790469 entries, 0 to 18790468\n",
+      "Data columns (total 23 columns):\n",
       "app                         uint16\n",
       "channel                     uint16\n",
       "click_id                    float64\n",
-      "click_time                  datetime64[ns]\n",
+      "click_time                  datetime64[ns, Asia/Shanghai]\n",
       "day                         uint8\n",
       "device                      uint16\n",
       "hour                        uint8\n",
       "ip                          uint32\n",
       "is_attributed               float64\n",
+      "newip                       int32\n",
       "os                          uint16\n",
-      "app_cumcnt_ip_device_os     uint16\n",
-      "os_cumcnt_ip                uint16\n",
       "channel_nunique_ip          uint8\n",
       "hour_nunique_ip_day         uint8\n",
       "app_nunique_ip              uint8\n",
-      "app_nunique_ip_os           uint8\n",
-      "device_nunique_ip           uint8\n",
       "app_nunique_channel         uint8\n",
       "app_nunique_ip_device_os    uint8\n",
-      "channel_cnt_ip_day_hour     uint16\n",
       "channel_cnt_ip_app          uint16\n",
-      "channel_cnt_ip_app_os       uint16\n",
-      "hour_var_ip_day_channel     float16\n",
-      "hour_var_ip_app_os          float16\n",
-      "day_var_ip_app_channel      float16\n",
-      "hour_mean_ip_app_channel    float16\n",
       "next_click_dt               uint16\n",
-      "next_click_dt2              uint16\n",
-      "next_click_dt_cnt           uint32\n",
-      "ip_mean_target              float64\n",
-      "os_mean_target              float64\n",
-      "app_mean_target             float64\n",
-      "device_mean_target          float64\n",
-      "channel_mean_target         float64\n",
-      "dtypes: datetime64[ns](1), float16(4), float64(7), uint16(11), uint32(2), uint8(9)\n",
-      "memory usage: 2.1 GB\n"
+      "ip_mean_target              float16\n",
+      "os_mean_target              float16\n",
+      "app_mean_target             float16\n",
+      "device_mean_target          float16\n",
+      "channel_mean_target         float16\n",
+      "dtypes: datetime64[ns, Asia/Shanghai](1), float16(5), float64(2), int32(1), uint16(6), uint32(1), uint8(7)\n",
+      "memory usage: 1.2 GB\n"
      ]
     }
    ],
@@ -1491,7 +1422,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save "
+    "# Save \n",
+    "\n"
    ]
   },
   {
@@ -1516,6 +1448,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## day8 train_sets\n",
+    "train_df = trn_df[trn_df.day==8]\n",
+    "## day9 valid sets \n",
+    "val_df = trn_df[trn_df.day==9]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -1523,16 +1467,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train shape:  (37500000, 34)\n",
-      "valid shape:  (2500000, 34)\n",
-      "test shape :  (18790469, 34)\n"
+      "train shape:  (62360949, 23)\n",
+      "valid shape:  (62832642, 23)\n",
+      "test shape :  (18790469, 23)\n"
      ]
     }
    ],
    "source": [
-    "val_df = trn_df[(len_trn-val_size):len_trn]\n",
-    "train_df = trn_df[:(len_trn-val_size)]\n",
-    "\n",
     "print(\"train shape: \", train_df.shape)\n",
     "print(\"valid shape: \", val_df.shape)\n",
     "print(\"test shape : \", test_df.shape)\n"
@@ -1540,24 +1481,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../feat2_109903890_149903890\n"
+      "../../feat3_trn_day8_val_day9\n"
      ]
     }
    ],
    "source": [
-    "print('../../feat2_{}_{}'.format(frm,to))\n",
-    "store = pd.HDFStore('../input/feat/feat2_{}_{}.h5'.format(frm,to))\n",
+    "trn_day = 'day8'\n",
+    "val_day = 'day9'\n",
+    "print('../../feat3_trn_{}_val_{}'.format(trn_day,val_day))\n",
+    "store = pd.HDFStore('../input/feat/feat3_trn_{}_val_{}.h5'.format(trn_day,val_day))\n",
     "store['train_df'] = train_df\n",
     "store['valid_df'] = val_df\n",
     "store['test_df'] = test_df\n",
     "store.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.HDFStore('../input/feat/feat3_trn_day8_val_day9.h5') as store:\n",
+    "    train_df = store['train_df']\n",
+    "    val_df   = store['valid_df']\n",
+    "    test_df  = store['test_df']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    56367324\n",
+       "1     6465318\n",
+       "Name: newip, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_df.newip.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    52412023\n",
+       "1     9948926\n",
+       "Name: newip, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.newip.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df['ip_lt126420'] = (train_df.ip<126420).astype('uint8')\n",
+    "test_df['ip_lt126420'] = (test_df.ip<126420).astype('uint8')\n",
+    "val_df['ip_lt126420'] = (val_df.ip<126420).astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    50165286\n",
+       "0    12195663\n",
+       "Name: ip_lt126420, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.ip_lt126420.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    51222594\n",
+       "0    11610048\n",
+       "Name: ip_lt126420, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_df.ip_lt126420.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    18790469\n",
+       "Name: ip_lt126420, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.ip_lt126420.value_counts()"
    ]
   }
  ],
