bunch of shit train log

--- a/src/model3_lgb.ipynb
+++ b/src/model3_lgb.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -378,146 +378,146 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>app_mean_target</td>\n",
-       "      <td>1.219015e+08</td>\n",
+       "      <th>1</th>\n",
+       "      <td>channel</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>app</td>\n",
-       "      <td>1.648685e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>channel_mean_target</td>\n",
-       "      <td>1.211488e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>next_click_dt</td>\n",
-       "      <td>8.081073e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>app_nunique_ip</td>\n",
-       "      <td>4.371795e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>channel</td>\n",
-       "      <td>3.672792e+06</td>\n",
+       "      <td>171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>os</td>\n",
-       "      <td>3.138400e+06</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>channel_nunique_ip</td>\n",
-       "      <td>2.412231e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>hour_nunique_ip_day</td>\n",
-       "      <td>2.071986e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>channel_cnt_ip_app</td>\n",
-       "      <td>1.380110e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>app_nunique_ip_device_os</td>\n",
-       "      <td>9.933940e+05</td>\n",
+       "      <th>14</th>\n",
+       "      <td>next_click_dt</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>hour</td>\n",
-       "      <td>9.451137e+05</td>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>channel_nunique_ip</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>app_nunique_ip</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>ip_mean_target</td>\n",
-       "      <td>7.912748e+05</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>app_nunique_ip_device_os</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>channel_cnt_ip_app</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>app_mean_target</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>channel_mean_target</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>hour_nunique_ip_day</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>device</td>\n",
-       "      <td>3.676112e+05</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>device_mean_target</td>\n",
-       "      <td>2.117689e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>os_mean_target</td>\n",
-       "      <td>6.731211e+04</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>ip</td>\n",
-       "      <td>4.462259e+04</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>os_mean_target</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>newip</td>\n",
-       "      <td>1.077610e+04</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>app_nunique_channel</td>\n",
-       "      <td>1.240340e+03</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>day</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>ip_lt126420</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           f         score\n",
-       "16           app_mean_target  1.219015e+08\n",
-       "0                        app  1.648685e+07\n",
-       "17       channel_mean_target  1.211488e+07\n",
-       "14             next_click_dt  8.081073e+06\n",
-       "10            app_nunique_ip  4.371795e+06\n",
-       "1                    channel  3.672792e+06\n",
-       "7                         os  3.138400e+06\n",
-       "8         channel_nunique_ip  2.412231e+06\n",
-       "9        hour_nunique_ip_day  2.071986e+06\n",
-       "13        channel_cnt_ip_app  1.380110e+06\n",
-       "12  app_nunique_ip_device_os  9.933940e+05\n",
-       "4                       hour  9.451137e+05\n",
-       "15            ip_mean_target  7.912748e+05\n",
-       "3                     device  3.676112e+05\n",
-       "19        device_mean_target  2.117689e+05\n",
-       "18            os_mean_target  6.731211e+04\n",
-       "5                         ip  4.462259e+04\n",
-       "6                      newip  1.077610e+04\n",
-       "11       app_nunique_channel  1.240340e+03\n",
-       "2                        day  0.000000e+00\n",
-       "20               ip_lt126420  0.000000e+00"
+       "                           f  score\n",
+       "1                    channel    265\n",
+       "0                        app    171\n",
+       "7                         os    150\n",
+       "14             next_click_dt    128\n",
+       "4                       hour    109\n",
+       "8         channel_nunique_ip     52\n",
+       "10            app_nunique_ip     44\n",
+       "15            ip_mean_target     42\n",
+       "12  app_nunique_ip_device_os     41\n",
+       "13        channel_cnt_ip_app     39\n",
+       "16           app_mean_target     34\n",
+       "17       channel_mean_target     33\n",
+       "9        hour_nunique_ip_day     26\n",
+       "3                     device     18\n",
+       "19        device_mean_target     15\n",
+       "5                         ip      8\n",
+       "18            os_mean_target      5\n",
+       "6                      newip      1\n",
+       "11       app_nunique_channel      1\n",
+       "2                        day      0\n",
+       "20               ip_lt126420      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame({'f':bst.feature_name(),'score':bst.feature_importance(importance_type='gain')}).sort_values(by='score',ascending=False)"
+    "pd.DataFrame({'f':bst.feature_name(),'score':bst.feature_importance(importance_type='split')}).sort_values(by='score',ascending=False)"
    ]
   },
   {
